redhat/rhoai/v3.5/base/02-config/nfs-provisioner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
  annotations:
    openshift.io/display-name: "NFS Provisioner"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: nfs-provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      serviceAccountName: nfs-server
      containers:
        - name: nfs-server
          image: registry.k8s.io/volume-nfs:0.8
          ports:
            - name: nfs
              containerPort: 2049
            - name: mountd
              containerPort: 20048
            - name: rpcbind
              containerPort: 111
          securityContext:
            privileged: true
          volumeMounts:
            - name: nfs-export
              mountPath: /exports
      volumes:
        - name: nfs-export
          persistentVolumeClaim:
            claimName: nfs-backing-store
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: nfs-provisioner
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    app: nfs-server
