redhat/rhoai/v3.5/base/02-config/maas-gateway.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: maas-gateway-route
  namespace: openshift-ingress
  annotations:
    openshift.io/display-name: "MaaS Gateway Route"
spec:
  to:
    kind: Service
    name: maas-default-gateway-maas-gateway-class
    weight: 100
  port:
    targetPort: 443
  tls:
    termination: passthrough
  wildcardPolicy: None
